# wscript

./: Cargo.toml  README.md
errors/: buffer-missing-type.ariadne  buffer-missing-type.ws  dispatch-count-long.ariadne  dispatch-count-long.ws  dispatch-count-number.ws  dispatch-count-unexpected.ws  dispatch-entry-name-missing.ariadne  init-missing-buffer-name.ariadne  init-missing-equal.ws  init-module-unset.ariadne  init-module-unset.ws  init-type-int-vs-array.ariadne  type-array-args-too-many.ariadne  type-array-args-too-many.ws  type-array-length-not-integer.ariadne  type-array-length-not-integer.ws  type-mat-close-bracket.ariadne  type-mat-close-bracket.ws  type-mat-open-bracket.ariadne  type-mat-open-bracket.ws  type-mat-param-f32.ariadne  type-mat-param-f32.ws  type-vec-close-bracket.ariadne  type-vec-close-bracket.ws  type-vec-open-bracket.ariadne  type-vec-open-bracket.ws  type-vec-param-scalar.ariadne  type-vec-param-scalar.ws
examples/: add-one.ws  readme.ws  rotate.ws  x.ws
run/: check-one-float.ws  write-array-f32.ws  write-one-f32.ws
runtime-errors/: init-array-bad-length.ariadne
src/: ast.rs  error.rs  lex.rs  lib.rs  main.rs  parse.rs  plan.rs  run.rs  wgsl.rs
src/lex/: tests.rs
src/parse/: error.rs  expr.rs  stmt.rs  tests.rs  ty.rs
src/plan/: buffer.rs  error.rs  expr.rs  little_endian_bytes.rs  module.rs
src/run/: elaborate.rs  error.rs  eval.rs
static-errors/: dispatch-count-number.ariadne  dispatch-count-open-missing.ariadne  dispatch-count-open-missing.ws  dispatch-count-unexpected.ariadne  dispatch-entry-name-missing.ws  init-missing-buffer-name.ws  init-missing-equal.ariadne  init-type-int-vs-array.ws
tests/: errors.rs  run.rs  runtime-errors.rs  static-errors.rs
